Feat: "Optimización token y consultas"